@@ -1094,6 +1094,21 @@ and so if $A$ denotes the coefficient matrix of the system, then $\csp{A}=\nsp{L
 </solution>
 </exercise>
 
+<exercise type="T" number="20" rough="subset of linearly independent is linearly independent">
+<problem contributor="robertbeezer">Suppose that $S$ is a finite linearly independent set of vectors from the vector space $V$.  Let $T$ be any subset of $S$.  Prove that $T$ is linearly independent.
+</problem>
+<solution contributor="robertbeezer">We will prove the contrapositive (<acroref type="technique" acro="CP" />): If $T$ is linearly dependent, then $S$ is linearly dependent.  This might be an interesting statement in its own right.<br /><br />
+Write $S=\set{\vectorlist{v}{m}}$ and without loss of generality we can assume that the subset $T$ is the first $t$ vectors of $S$, $t\leq m$, so $T=\set{\vectorlist{v}{t}}$.  Since $T$ is linearly dependent, by <acroref type="definition" acro="LI" /> there are scalars, not all zero, $\scalarlist{a}{t}$, so that
+<alignmath>
+\zerovector
+<![CDATA[&= \lincombo{a}{v}{t}\\]]>
+<![CDATA[&= \lincombo{a}{v}{t}+\zerovector+\zerovector+\dots+\zerovector\\]]>
+<![CDATA[&= \lincombo{a}{v}{t}+0\vect{v}_{t+1}+0\vect{v}_{t+2}+\dots+0\vect{v}_{m}]]>
+</alignmath>
+which is a nontrivial relation of linear dependence (<acroref type="definition" acro="RLD" />) on the set $S$, so we can say $S$ is linearly dependent.
+</solution>
+</exercise>
+
 <exercise type="T" number="40" rough="Generalize Theorem EMMVP to bases, spanning sets">
 <problem contributor="robertbeezer">Prove the following variant of <acroref type="theorem" acro="EMMVP" /> that has a weaker hypothesis:  Suppose that $C=\set{\vectorlist{u}{p}}$ is a linearly independent spanning set for $\complex{n}$.  Suppose also that $A$ and $B$ are $m\times n$ matrices such that $A\vect{u}_i=B\vect{u}_i$ for every $1\leq i\leq n$.  Then $A=B$.<br /><br />
 Can you weaken the hypothesis even further while still preserving the conclusion?
