@@ -6,6 +6,7 @@ New:  Diagram KRI (kernel and range isomorphisms)
 New:  Exercise NM.T31 (with solution)
 New:  Exercises LT.T30 and LT.T31
 New:  Exercise LISS.T51, converse of Theorem VRRB
+New:  Exercise LISS.T20, subset of linearly independent set is linearly independent
 Edit:  Explained  min(m,n)  in Exercise PD.T15
 Change:  Replaced Definition RR by an informal discussion
 Change:  Definition TSVS renamed as Definition SSVS
